# codesieve

./: .gitignore  pyproject.toml  readme.md  requirements.txt
src/codesieve/: __init__.py  _defaults.py  data.py  grains.py  sieve.py  walker.py
